[package]
name = "tokio_flag_demo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dashmap = "5.0.0"
futures-delay-queue = "0.5.0"
futures-intrusive = "0.4.0"
once_cell = "1.10.0"
tokio = {version="1.16.1", features=["full"]}
